--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    background-color: #000;    
+    background-color: #000000;    
     font-family: 'TetrisFont', 'Press Start 2P', sans-serif;
 }
 /* le palline colorate di background */
@@ -84,12 +84,29 @@ h3 {
 }
 
 .grid {
-    width: 200px;
-    height: 400px;
-    
+    width: 202px;
+    height: 404px;
+    background: #000;
     display: flex;
     flex-wrap: wrap;
     border-radius: 5px;
+    position: relative;
+    z-index: -1;
+    padding-top: 2px;
+}
+
+@property --angle{
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
+@keyframes spin{
+  from {
+    --angle: 0deg;
+  } to {
+    --angle: 360deg;
+  }
 }
 
 .grid div {
@@ -98,32 +115,101 @@ h3 {
     
 }
 
-.squares {
-  border: 1px solid rgb(84, 84, 84);
+.border {
+    width: 202px;
+    height: 404px;
+    border-radius: 5px;
+    position: relative;
+    position: absolute;
+    z-index: -2;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: 1px solid rgb(84, 84, 84);
 }
+
+.border::after, .border::before {
+  content: '';
+  position: absolute;
+  height: calc(100% + 3px);
+  width: calc(100% + 3px);
+  top: 50%;
+  left: 50%;
+  background-image: conic-gradient(from var(--angle), #ff4545, #00ff99, #006aff, #ff0095, #ff4545);
+  translate: -50% -50%;
+  z-index: -3;
+  filter: blur(3px);
+  animation: 3s spin linear infinite;
+}
+
 
 .tetromino {
-  background-color: transparent;
-  border: 2px solid;  /* Il colore sarà impostato dinamicamente via JavaScript */
+   background-color: black;
+  position: relative;
 }
 
+.tetromino::after, .tetromino::before {
+  content: '';
+  position: absolute;
+  height: calc(100% + 3px);
+  width: calc(100% + 3px);
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  z-index: -1;
+  filter: blur(3px);
+}
+
+.tetromino::before {
+  filter: blur(1.5rem);
+  opacity: 0.5;
+}
+
+
+
 .mini-grid {
-  width: 163px;
-  height: 120px;
+  width: 82px;
+  height: 90px;
   display: flex;
   flex-wrap: wrap;
   align-content: center;
   align-items: center;
   margin-left: 50px;
   border: 1px solid rgb(84, 84, 84);
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgb(0, 0, 0);
+  z-index: -1;
   border-radius: 5px;
+  position: relative;
+}
+
+.border-grid {
+  width: 82px;
+  height: 90px;
+  border-radius: 5px;
+  position: relative;
+  position: absolute;
+  z-index: -2;
+  background-color: rgba(0, 0, 0, 0.3);
+  border: 1px solid rgb(84, 84, 84);
+  left: 60.6%;
+}
+
+.border-grid::after, .border-grid::before {
+  content: '';
+  position: absolute;
+  height: calc(100% + 3px);
+  width: calc(100% + 3px);
+  top: 50%;
+  left: 50%;
+  background-image: conic-gradient(from var(--angle), #ff4545, #00ff99, #006aff, #ff0095, #ff4545);
+  translate: -50% -50%;
+  z-index: -3;
+  filter: blur(3px);
+  animation: 3s spin linear infinite;
 }
 
 .mini-grid div {
   height: 20px;
   width: 20px;
-  border: 1px solid rgba(0, 68, 255, 0.428);
+  
 }
 
 /*
